# neeva-android

./: .gitattributes  .gitignore  CONTRIBUTING.md  README.md  bootstrap.sh  build.gradle  gradle.properties  lint.xml  pull_new_golden_screenshots.sh  settings.gradle
.circleci/: config.yml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
NeevaSearchBrowser/: build.gradle  settings.gradle
NeevaSearchBrowser/app/: build.gradle
NeevaSearchBrowser/weblayer/: build.gradle
WebLayerDemo/: README.md  settings.gradle
WebLayerDemo/app/: build.gradle
WebLayerDemo/weblayer/: build.gradle
app/: build.gradle  proguard-rules.pro
chromium/: .gitignore  README.md  make-projects.sh
chromium/release-100/: WebLayerShell.apk  WebLayerSupport.apk
chromium/release-100-x64/: WebLayerShell.apk  WebLayerSupport.apk
chromium/release-96-x86/: args.gn  (+1 more)
screenshotTests/: build.gradle
scripts/: build-release.sh  build-staging.sh  build.gradle  bundleconfig.json  bundletool.sh  create-emulator.sh  get-build-tools-path.sh  install-apks.sh  install-weblayer-support-apk.sh  make-archive.sh  make-bundle.sh  make-clean.sh  open-many-tabs.sh  package.json  parseTestLog.sh  pull-new-golden-screenshots.sh  run-instrumented-tests.sh  save_screenshot.sh  save_video.sh  string_updater.sh  symbolicate.py  webpack.config.js
testCommon/: build.gradle
weblayer/: .gitignore  build.gradle  make-src.sh  src
weblayer_support/: README.md  build.gradle
weblayer_support/snapshots/106-x64/: WebLayerShell.apk  WebLayerSupport.apk  args.gn
(+1033 files in other folders)
